# linuxmuster-base7

./: .gitignore  Claude.md  DOCKER_BUILD_FIXES.md  MANIFEST.in  Neu73.md  Neuerungen in lmn 73.md  README.md  Renew_certs.md  ToDo.md  apply-docker-fixes.sh  buildpackage.sh  extractMessages.sh  get-depends.sh  make-messages.sh  pyproject.toml  setup.py  syncToTestServer.sh
.claude/: settings.local.json
.github/workflows/: release.yml
debian/: README.Debian  changelog  control  copyright  devices.csv.5  devices.csv.de.5  dirs  install  postinst  rules
docs/: import_subnets.md  refactoring-phase-1.md  refactoring-phase-2.md  release-notes-7.4.md.de  upgrade-26.04.de.md  upgrade-26.04.md
etc/linuxmuster/: allowed_ports  base_ports  blocked_ports  classrooms  clientcert.conf  codename  cyrus-mbox.conf  printers  room_defaults
etc/profile.d/: Z99-linuxmuster.sh
etc/sudoers.d/: student  teacher
lib/: certgen.py  constants.py  dhcpd-update-samba-dns.py  functions.py
lib/setup.d/: a_ini.py  b_dialog.py  b_network-dialog.py  c_fstab.py  c_general-dialog.py  d_templates.py  e_dhcp.py  e_fstab.py  f_dhcp.py  f_ssh.py  g_add-server.py  g_ssh.py  g_ssl.py  h_add-server.py  h_samba-provisioning.py  h_ssh.py  h_ssl.py  i_linbo.py  i_samba-provisioning.py  i_sophomorix.py  i_ssl.py  j_linbo.py  j_samba-provisioning.py  j_samba-users.py  k_add-server.py  k_cups.py  k_samba-users.py  l_add-server.py  l_samba-users.py  m_firewall.py  n_linbo.py  o_mail.py  o_opsi.py  p_mail.py  z_final.py
locale/de/LC_MESSAGES/: linuxmuster-base.mo
po/: de.po  dialog.pot  messages.pot
sbin/: linuxmuster-holiday  linuxmuster-holiday-generate  linuxmuster-import-devices  linuxmuster-import-devices.py  linuxmuster-import-subnets  linuxmuster-modini  linuxmuster-opnsense-reset  linuxmuster-release-upgrade  linuxmuster-renew-certs  linuxmuster-setup  linuxmuster-setup.py  linuxmuster-update-ntpconf
share/: defaults.sh  dhcpd-update-samba-dns.py  fix-ntp_signd-dir.sh  renew_server_cert.sh  setfacl.sh  setupdefaults.ini
share/examples/: create-testusers.py  students.csv  teachers.csv
share/firewall/opnsense/: 50-linuxmuster.auth.conf  config-rollout.xml  (+7 more)
share/templates/: cupsd.conf  devices.csv  dhcpd.apparmor.d  dhcpd.conf  dhcpd.custom.conf  dhcpd.devices.conf  dhcpd.events.conf  dhcpd.servernet.conf  dhcpd.subnets.conf  firewall_cert_ext.cnf  global.devices.csv  hosts  interfaces  interfaces.linuxmuster  linux-login.script  logon.cmd  nsswitch.conf  ntp.conf  ntp.conf.admin  ntp.conf.dist  ntpd.apparmor.d  school.conf  server_cert_ext.cnf  smb.conf  smb.conf.admin  subnets.csv  timesyncd.conf  webui-sudoers  windows-login.cmd
src/: __init__.py
src/cli/: __init__.py  holiday.py  holiday_generate.py  import_devices.py  import_subnets.py  modini.py  opnsense_reset.py  renew_certs.py  setup.py  update_ntpconf.py
src/examples/: base.py  logging.py
src/linuxmuster_base7/: __init__.py  dhcpd_update_samba_dns.py  functions.py  logging.py
src/setup/: a_ini.py  c_general-dialog.py  d_templates.py  e_fstab.py  g_ssl.py  h_ssh.py  i_linbo.py  j_samba-provisioning.py  k_samba-users.py  l_add-server.py  m_firewall.py  z_final.py
tests/: README.md  test_setup_cli.sh  test_setup_integration.sh
(+29 files in other folders)
